--- a/index.html
+++ b/index.html
@@ -17,10 +17,19 @@
 </head>
 
 <body class="relative">
-
+  <div id="UserModal" class="modal flex flex-col justify-center items-center">
+    <div class="flex flex-col modal_content gap-5 ">
+        <h2 class="text-center">Please enter your name </h2>
+        <div class="userEntry w-full">
+          <input id="user_entry" placeholder="user here..."
+                class="w-full"></input>
+              </div>
+    </div>
+   </div>
   
 <div class="level absolute top-16 right-48">
-  <h1 class="text-3xl">level:NA</h1>
+  <h1 class="text-3xl">User: </h1>
+  <h1 class="text-3xl">Level: NA</h1>
 
 </div>
 
@@ -31,26 +40,26 @@
     <div class="game-container">
       
       <div class="boxes flex flex-wrap flex-row gap-10 items-center justify-center">
-        <div class="greenBox flex justify-center items-center">
-          <div class="greenBox-inner ">
+        <div class="greenBox flex justify-center items-center mt-6">
+          <div class="greenBox-inner">
             <h1>Green 0</h1>
           </div>
 
         </div>
-        <div class="redBox flex justify-center items-center">
+        <div class="redBox flex justify-center items-center mt-6">
 
           <div class="redBox-inner">
             <h1>Red 1</h1>
           </div>
         </div>
-        <div class="yellowBox flex justify-center items-center">
+        <div class="yellowBox flex justify-center items-center mb-6">
 
           <div class="yellowBox-inner">
             <h1>Yellow 2</h1>
           </div>
 
         </div>
-        <div class="blueBox flex justify-center items-center">
+        <div class="blueBox flex justify-center items-center mb-6">
 
           <div class="blueBox-inner">
             <h1>Blue 3</h1>
@@ -61,6 +70,7 @@
 
     </div>
   </div>
+  <script src="script.js"></script>
 </body>
 
 </html>
