worked some logic

--- a/index.html
+++ b/index.html
@@ -28,46 +28,14 @@
    </div>
   
 <div class="level absolute top-16 right-48">
-  <h1 class="text-3xl">User: </h1>
-  <h1 class="text-3xl">Level: NA</h1>
 
 </div>
 
   <div class="container mb-16 flex justify-center items-center flex-col gap-10 jsutify-around">
-    <div class="start flex justify-center">
-      <h1 class="text-4xl mt-16">Start!</h1>
+    <div class="flex justify-center">
+      <h1 class="Start text-4xl mt-16">Start!</h1>
     </div>
     <div class="game-container">
-      
-      <div class="boxes flex flex-wrap flex-row gap-10 items-center justify-center">
-        <div class="greenBox flex justify-center items-center mt-6">
-          <div class="greenBox-inner">
-            <h1>Green 0</h1>
-          </div>
-
-        </div>
-        <div class="redBox flex justify-center items-center mt-6">
-
-          <div class="redBox-inner">
-            <h1>Red 1</h1>
-          </div>
-        </div>
-        <div class="yellowBox flex justify-center items-center mb-6">
-
-          <div class="yellowBox-inner">
-            <h1>Yellow 2</h1>
-          </div>
-
-        </div>
-        <div class="blueBox flex justify-center items-center mb-6">
-
-          <div class="blueBox-inner">
-            <h1>Blue 3</h1>
-          </div>
-
-        </div>
-      </div>
-
     </div>
   </div>
   <script src="script.js"></script>
