added sound for the yellow box

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     <div class="game-container">
     </div>
   </div>
+
+  <audio id="yellowSound" src="music/yellow.mp3"></audio>
+
+
   <script src="script.js"></script>
 </body>
 
