added sound for the blue box

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   </div>
 
   <audio id="yellowSound" src="music/yellow.mp3"></audio>
+  <audio id="blueSound" src="music/blue.mp3"></audio>
 
 
   <script src="script.js"></script>
