added sound for the red box

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   <audio id="yellowSound" src="music/yellow.mp3"></audio>
   <audio id="blueSound" src="music/blue.mp3"></audio>
   <audio id="greenSound" src="music/green.mp3"></audio>
+  <audio id="redSound" src="music/red.mp3"></audio>
 
 
   <script src="script.js"></script>
