added losing sound

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   <audio id="blueSound" src="music/blue.mp3"></audio>
   <audio id="greenSound" src="music/green.mp3"></audio>
   <audio id="redSound" src="music/red.mp3"></audio>
+  <audio id="losingSound" src="music/wrong.mp3"></audio>
 
 
   <script src="script.js"></script>
