fixed some logic and added a local storage

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="relative">
   <div id="UserModal" class="modal flex flex-col justify-center items-center">
     <div class="flex flex-col modal_content gap-5 ">
-      <h2 class="text-center text-2xl">Please &nbsp; enter &nbsp; your &nbsp; name</h2> 
+      <h2 class="text-center text-2xl">Please &nbsp; enter &nbsp; your &nbsp; name &nbsp;🤪</h2> 
       <div class="userEntry w-full">
         <input id="user_entry" placeholder="enter  username  here..." class="w-full"></input>
         <div class="submit flex justify-end">
@@ -40,6 +40,9 @@
       <!-- <h1 class="Start text-4xl mt-16 hidden">...</h1> -->
     </div>
     <div class="game-container">
+    </div>
+    <div>
+      <button type="button" id="nextLevel" class="text-2xl bg-green-600 p-3 text-center ">Next</button>
     </div>
   </div>
 
